--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
+.idea*
+vendor/
+.vscode/
+.DS_Store
+.git
+logs
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -26,7 +33,3 @@ go.work.sum
 
 # env file
 .env
-
-# Editor/IDE
-# .idea/
-# .vscode/
